src/objects/Apttus_Base2__UIComponentProviderMeta__mdt.object
<CustomObject>
    <fields>
        <fullName>Apttus_Base2__ClassName__c</fullName>
        <label>Provider Class Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__IsStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ObjectName__c</fullName>
        <label>Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageName__c</fullName>
        <label>Package Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ProviderId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Manifest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Apttus UI Component Provider Meta</label>
    <pluralLabel>Apttus UI Component Providers Meta</pluralLabel>
</CustomObject>